samples/_failures_safe/1760888052_41a674_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1413a286.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_1413a286.c:158:5: error: expected expression at end of input
  158 |     if (analyzer ==
      |     ^~
./samples/SAFE/__tmp_1413a286.c:158:5: error: expected declaration or statement at end of input
